<resources>
    <string name="app_name">亿社区</string>
    <string name="community">社区</string>
    <string name="steward">管家</string>
    <string name="neighbour">邻里</string>
    <string name="mine">我的</string>
    <string name="zuolinyouli">左邻右里</string>
    <string name="publish">发布</string>
    <string name="add_house">添加房屋</string>
    <string name="smart_home">智能家居</string>
    <string name="smart_door">智慧门禁</string>
    <string name="smart_park">智慧停车</string>
    <string name="property_service">物业服务</string>
    <string name="personnel_identity">人员身份</string>
    <string name="personnel_information">个人信息</string>
    <string name="proprietor">业主</string>
    <string name="relative">家属</string>
    <string name="tenant">租客</string>
    <string name="name">姓　名：</string>
    <string name="identity_card">身份证：</string>
    <string name="house_information">房屋信息</string>
    <string name="area">区域：</string>
    <string name="xiaoqu">小区：</string>
    <string name="submit">提交</string>
    <string name="hint_name">请填写真实姓名，以便小区物业审核</string>
    <string name="hint_idcard">请填写正确身份证号码</string>
    <string name="building">楼栋：</string>
    <string name="unit">单元：</string>
    <string name="floor">楼层：</string>
    <string name="room_number">房号：</string>
    <string name="car_card_name">姓名： %1$s</string>
    <string name="phone">电话： %1$s</string>
    <string name="parking">车位： %1$s</string>
    <string name="term_of_validity">到期时间： %1$s</string>
    <string name="surplus_days">还有%1$s天</string>
    <string name="apply_card_result">您申请的%1$s正在审核中</string>
    <string name="parking_charge_hint">温馨提示：\n应缴金额以支付时间为准，确认缴费后请在15分钟之内离场，否则将会重新计算费用！</string>
    <string name="cp_select_city">选择城市</string>
    <string name="cp_used_city">最近访问城市</string>
    <string name="cp_hot_city">热门城市</string>
    <string name="cp_located_city">定位城市</string>
    <string name="cp_hint_search_box">请输入城市名或拼音</string>
    <string name="cp_nothing_found">没有搜索结果~</string>
    <string name="cp_locating">正在定位…</string>
    <string name="cp_located_failed">定位失败</string>
    <string name="login">登录</string>
    <string name="feedback">请填写反馈信息</string>
    <string name="feedback_hint">请写下您的宝贵意见</string>
    <string name="select_community">请选择小区</string>
    <string name="contacts">联系人</string>
    <string name="contact_information">联系方式</string>
    <string name="opinion">意见</string>
    <string name="car_city_json">{"carCityList":[{"province":"北京市","shortfrom":"京"},{"province":"上海市","shortfrom":"沪"},{"province":"天津市","shortfrom":"津"},{"province":"重庆市","shortfrom":"渝"},{"province":"河北省","shortfrom":"冀"},{"province":"山西省","shortfrom":"晋"},{"province":"辽宁省","shortfrom":"辽"},{"province":"吉林省","shortfrom":"吉"},{"province":"黑龙江省","shortfrom":"黑"},{"province":"江苏省","shortfrom":"苏"},{"province":"浙江省","shortfrom":"浙"},{"province":"安徽省","shortfrom":"皖"},{"province":"福建省","shortfrom":"闽"},{"province":"江西省","shortfrom":"赣"},{"province":"山东省","shortfrom":"鲁"},{"province":"河南省","shortfrom":"豫"},{"province":"湖北省","shortfrom":"鄂"},{"province":"湖南省","shortfrom":"湘"},{"province":"广东省","shortfrom":"粤"},{"province":"海南省","shortfrom":"琼"},{"province":"四川省","shortfrom":"川"},{"province":"贵州省","shortfrom":"贵"},{"province":"云南省","shortfrom":"云"},{"province":"陕西省","shortfrom":"陕"},{"province":"甘肃省","shortfrom":"甘"},{"province":"青海省","shortfrom":"青"},{"province":"内蒙古自治区","shortfrom":"蒙"},{"province":"广西壮族自治区","shortfrom":"桂"},{"province":"西藏自治区","shortfrom":"藏"},{"province":"宁夏回族自治区","shortfrom":"宁"},{"province":"新疆维吾尔自治区","shortfrom":"新"},{"province":"香港特别行政区","shortfrom":"港"},{"province":"澳门特别行政区","shortfrom":"澳"},{"province":"台湾","shortfrom":"台"}]}</string>
    <string name="deal_success">交易成功</string>
    <string name="payment_method">支付方式</string>
    <string name="payment_channel">支付渠道</string>
    <string name="payment_instructions">缴费说明</string>
    <string name="payment_number">户　　号</string>
    <string name="creat_time">创建时间</string>
    <string name="input_right_carNo_please">请输入正确的车牌号</string>
    <string name="input_right_name_please">请输入正确的姓名</string>
    <string name="input_right_phone_please">请输入正确的联系方式</string>
    <string name="select_park_please">请选择停车场</string>
    <string name="select_month_count_please">请选择预缴月数</string>
    <string name="contact_now">马上联系</string>
    <string name="introduction_of_firm">商家介绍</string>
    <string name="age_of_firm">商家年龄</string>
    <string name="scope_of_service">服务范围</string>
    <string name="address_of_firm">商户地址</string>
    <string name="office_hours">营业时间</string>
    <string name="contact_details">联系方式</string>
    <string name="firm_live">商家实景</string>
    <string name="business_license">营业执照</string>
    <string name="introduction_of_service">服务介绍</string>
    <string name="certified">已认证</string>
    <string name="created_password">本次生成密码</string>
    <string name="qr_digit">二维码或数字</string>
    <string name="create_digit_password">生成数字密码</string>
    <string name="send_to_friend">发送给好友</string>
    <string name="services_remark_hint">亲，请确保与商家有过交易后如实评价！可填写商家服务态度，商品质量等…</string>
    <string name="remark">发表评论</string>
    <string name="app_name_s1">光能安防</string>
    <string name="security">安防</string>
    <string name="room">房间</string>
    <string name="scene">场景</string>
    <string name="hisotry">历史</string>
    <string name="more">更多</string>
    <string name="set_net_4_host">为主机配置WIFI，主机可以进行联网控制</string>
    <string name="update_host_password">修改当前主机密码，设置您的专属密码</string>
    <string name="input_wifi_password">请输入WIFI密码</string>
    <string name="set_net">配网</string>
    <string name="set_wifi_step_1">
        第一步：确认主机电源已开启，蓝灯常亮。
    </string>
    <string name="set_wifi_step_2">
        第二步：打开手机--设置“WLAN”列表,选择主机的热点“IWTAC_...”进行连接,主机热点的默认密码为“123456789”。
    </string>
    <string name="set_wifi_step_3">
        第三步：用户选择家庭wifi并输入正确的wifi密码。
    </string>
    <string name="name_4_host">请为主机取一个名字</string>
    <string name="zeffect_recordbutton_finger_up_to_cancal_send">手指上滑，取消发送</string>
    <string name="zeffect_recordbutton_releasing_finger_to_cancal_send">松开手指，取消发送</string>
    <string name="zeffect_recordbutton_time_too_short">时间太短</string>
    <string name="btnHD">高清</string>
    <string name="standardDefinition">标清</string>
    <string name="videoPlaying">视频播放</string>
    <string name="takeACabdidPhotograph">抓拍</string>
    <string name="inversion">倒置</string>
    <string name="talkback">对讲</string>
    <string name="monitor">监听</string>
    <string name="definition">清晰度</string>
    <string name="back">退出</string>
    <string name="alert_title">提示！</string>
    <string name="alert_btn_OK">确定</string>
    <string name="alert_btn_Cancel">取消</string>
    <string name="alert_add_btn_OK">确定添加</string>
    <string name="alert_add_btn_Cancel">取消</string>
    <string name="alert_btn_YES">是</string>
    <string name="alert_btn_NO">否</string>
    <string name="alert_title_login_failed">登录失败!</string>
    <string name="notice_Result_NOPRI">权限不足.</string>
    <string name="notice_Result_UserNoExist">用户不存在.</string>
    <string name="notice_Result_PWDError">用户名或密码错误.</string>
    <string name="notice_Result_BadResult">数据损坏.</string>
    <string name="notice_Result_NetError">网络连接失败!</string>
    <string name="notice_Result_Server_Offline">前端设备不在线.</string>
    <string name="notice_Result_VerifyFailed">验证错误.</string>
    <string name="notice_Result_Old_Version">前端设备版本不支持.</string>
    <string name="login_Result_ConnectTimeout">连接超时.</string>
    <string name="notice_Result_ConnectServerFailed">连接设备失败.</string>
    <string name="alert_stop_play">是否停止接收视频?</string>
    <string name="Notification_Playing_Chn">正在收看： </string>
    <string name="deviceTurn">该设备不支持转动</string>
    <string name="alert_clear_list">是否清空设备列表？</string>
    <string name="alert_delete_server">是否删除设备？</string>
    <string name="alert_set_config_ok">更改配置成功.</string>
    <string name="alert_open_setting_view">温馨提示：设备wifi模式或配置已经改变；是否需要打开网络设置，修改您的Wifi连接？</string>
    <string name="alert_open_setting_view_ap">温馨提示：前端: 备处于AP热点模式，如果需要连接它，请点击“确定”修改你的Wifi连接配置</string>
    <string name="alert_get_config_fail">获取配置失败:</string>
    <string name="alert_set_config_fail">设置配置失败:</string>
    <string name="alert_username_is_invalide">用户名不能为空</string>
    <string name="alert_password_err">原密码输入有误.</string>
    <string name="alert_password_confirm_err">新密码两次输入不相同.</string>
    <string name="alert_station_password_is_null">Station 的密码不能为空.</string>
    <string name="alert_ap_name_is_null">AP 名字不能为空.</string>
    <string name="alert_station_name_is_null">Station 名字不能为空.</string>
    <string name="result_code_conn_fail">设备连接失败</string>
    <string name="login_Result_MR_Server_Busy">服务器正忙，请稍后再试.</string>
    <string name="login_Result_MR_Server_Disconnet">与前端设备连接已经断开.</string>
    <string name="notice_Result_PWD_ERR_AP">AP 密码要求为空或者大于等于8个字符.</string>
    <string name="notice_Result_PWD_ERR_Station">Station 密码要求为空或者大于等于8个字符.</string>
    <string name="notice_Result_PWD_ERR">密码要求为空或者大于等于8个字符.</string>
    <string name="toast_last_page">已经是最后一页</string>
    <string name="toast_first_page">已经是第一页</string>
    <string name="toast_add_in_list">已添加到列表</string>
    <string name="toast_remove_from_list">已从列表删除</string>
    <string name="toast_network_unreachable">网络连接不可用，请检查网络设置</string>
    <string name="toast_list_is_null">设备列表为空, 请添加设备</string>
    <string name="connecting">正在连接&#8230;</string>
    <string name="loading">正在加载</string>
    <string name="server">设备地址:</string>
    <string name="port">端       口:</string>
    <string name="username">用户名: </string>
    <string name="password">密     码: </string>
    <string name="password_old">原密码: </string>
    <string name="password_new">新密码: </string>
    <string name="password_confirm">确认密码: </string>
    <string name="autologin">自动登录</string>
    <string name="record_info">记住登录信息</string>
    <string name="norecord">没有输入记录</string>
    <string name="nameHint">在这里输入一个名称</string>
    <string name="serverHint">请输入设备地址</string>
    <string name="portHint">请输入接收端口</string>
    <string name="usernameHint">请输入用户名</string>
    <string name="passwordHint">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_serverList">设备列表</string>
    <string name="btn_back">返回</string>
    <string name="btn_refresh">刷新</string>
    <string name="btn_add">添加</string>
    <string name="btn_delete">删除</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_finish">完成</string>
    <string name="btn_search">搜索</string>
    <string name="btn_research">搜索设备</string>
    <string name="btn_addtolist">添加到列表</string>
    <string name="btn_IsInlist">已添加到列表</string>
    <string name="btn_save">保存</string>
    <string name="btn_save_setting">设置</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>
    <string name="btn_add_qr">二维码添加</string>
    <string name="btn_stop_all">停止</string>
    <string name="btn_stop_play">停止</string>
    <string name="btn_start_play">收看</string>
    <string name="btn_one_key_sync">设为手机时间</string>
    <string name="btn_save_time">设置时间</string>
    <string name="btn_get_from_list">从本地WIFI中选取</string>
    <string name="title_add_device">添加设备</string>
    <string name="title_Edit_device">修改设备</string>
    <string name="searching">正在搜索设备&#8230;</string>
    <string name="searchcancel">搜索被取消</string>
    <string name="has">搜索到</string>
    <string name="device_found">台设备</string>
    <string name="logining">正在登录&#8230;</string>
    <string name="Notification_To_Login">设备未登录&#8230;</string>
    <string name="str_Notic_Close_APP">是否要退出程序? </string>
    <string name="str_serverList">设备列表 </string>
    <string name="notice_RecvDataFailed">连接失败.</string>
    <string name="notice_RecvStop">与前端设备连接断开.</string>
    <string name="str_Select_To_Play">请选择收看通道</string>
    <string name="str_PlayingChn">正在收看通道：</string>
    <string name="wifi_mode">WIFI 模式: </string>
    <string name="wifi_mode_ap">AP</string>
</resources>